# pipes-routing

./: _stack.yaml  pipes-routing.cabal  shell.nix  stack.yaml
pipes-routing/: .projectile  default.nix  pipes-routing.cabal  shell.nix  stack.yaml
pipes-routing-zmq/: LICENSE  README.md  default.nix  pipes-routing-zmq.cabal  shell.nix  stack.yaml
pipes-routing-zmq/app/: Client.hs
pipes-routing-zmq/src/Pipes/Routing/: ZMQ4.hs
pipes-routing/src/Control/Monad/Indexed/: State.hs
pipes-routing/src/Pipes/: .#Routing.hs  Routing.hs
pipes-routing/src/Pipes/Routing/: HMap.hs  Ingest.hs  Network.hs  Operations.hs  Process.hs  Publish.hs  Publisher.hs  Types.hs  ZMQ.hs
src/: .dir-locals.el
src/Pipes/: Routing.hs
src/Pipes/Routing/: HMap.hs  Ingest.hs  Process.hs  Publish.hs  Types.hs  ZMQ.hs
