name:                pipes-routing-zmq
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/cdodev/pipes-routing-zmq#readme
license:             BSD3
license-file:        LICENSE
author:              Ben Ford
maintainer:          ben@commandodev.com
copyright:           2017 Ben Ford
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Pipes.Routing.ZMQ4
  
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , pipes-routing
                     , pipes-zeromq4
                     , zeromq4-haskell
  default-language:    Haskell2010

executable pipes-zmq-client
  hs-source-dirs:      app
  main-is:             Client.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pipes-routing-zmq
  default-language:    Haskell2010

test-suite pipes-routing-zmq-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pipes-routing-zmq
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cdodev/pipes-routing-zmq
