name:                pipes-routing
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/pipes-routing#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Pipes.Routing.Types
                       Pipes.Routing.Publish
                       Pipes.Routing.Process
                       Pipes.Routing.Network
                       Pipes.Routing.Ingest
                       Pipes.Routing.Operations
                       Pipes.Routing.HMap
                       Pipes.Routing
                       Control.Monad.Indexed.State
  build-depends:       base >= 4.7 && < 5
                     , async
                     , cereal
                     , pipes
                     , pipes-concurrency
                     , monad-control
                     , bifunctors
                     , bytestring
                     , containers
                     , generic-lens
                     , indexed
                     , mtl
                     , lens
                     , lifted-base
                     , pipes-zeromq4
                     , servant
                     , servant-server
                     , servant-client
                     , singletons >= 2.2
                     , stm
                     , text
                     , zeromq4-haskell
  default-language:    Haskell2010
  Extensions:
     UndecidableInstances,
     GeneralizedNewtypeDeriving,
     FlexibleInstances,
     MultiParamTypeClasses,
     Rank2Types

executable pipes-routing-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pipes-routing
  default-language:    Haskell2010

test-suite pipes-routing-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pipes-routing
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/pipes-routing
